--- a/Example/Podfile
+++ b/Example/Podfile
@@ -6,6 +6,8 @@ source 'https://github.com/CocoaPods/Specs.git'
 target "S2MToolbox" do
   pod 'S2MToolbox/Core', :path => "../"
   pod 'S2MToolbox/QRCode', :path => "../"
+  pod 'S2MToolbox/ShopFinder', :path => "../"
+
 
 end
 
