--- a/Example/Podfile
+++ b/Example/Podfile
@@ -4,7 +4,7 @@ platform :ios, "7.0"
 source 'https://github.com/CocoaPods/Specs.git'
 
 target "S2MToolbox" do
-  pod 'S2MToolbox/Core', :path => "../"
+  pod 'S2MToolbox', :path => "../"
   pod 'S2MToolbox/QRCode', :path => "../"
   pod 'S2MToolbox/ShopFinder', :path => "../"
 end
